force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>cm_Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>