force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>cm_Legal_Description__c</fullName>
    <label>Legal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>