force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Licensed_Appraiser_Allowed__c.field-meta.xml
<CustomField>
    <fullName>cm_Licensed_Appraiser_Allowed__c</fullName>
    <description>Custom field to track if there is a licensed appraiser allowed.</description>
    <inlineHelpText>Tracks if a Licensed Appraiser is Allowed for General or Residential purposes.</inlineHelpText>
    <label>Licensed Appraiser Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>