force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Order_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>cm_Order_Appraisal__c</fullName>
    <label>Order Appraisal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Bid Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>