force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>cm_Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Is</fullName>
            </value>
            <value>
                <fullName>As Built</fullName>
            </value>
            <value>
                <fullName>As Constructed</fullName>
            </value>
            <value>
                <fullName>EPA Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>