force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Report_Detail__c.field-meta.xml
<CustomField>
    <fullName>cm_Report_Detail__c</fullName>
    <description>This field is optional and specifies the text value used to provide comments regarding the subject assets and/or the request itself. It is manually populated.</description>
    <label>Report Request Comments</label>
    <type>TextArea</type>
</CustomField>