force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Requested_Approaches__c.field-meta.xml
<CustomField>
    <fullName>cm_Requested_Approaches__c</fullName>
    <label>Requested Approaches</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Market Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>