force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Requested_Property_Rights__c.field-meta.xml
<CustomField>
    <fullName>cm_Requested_Property_Rights__c</fullName>
    <label>Requested Property Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee Simple</fullName>
            </value>
            <value>
                <fullName>Leased Fee</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>