force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Requested_Values__c.field-meta.xml
<CustomField>
    <fullName>cm_Requested_Values__c</fullName>
    <label>Requested Values</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Value As Is</fullName>
            </value>
            <value>
                <fullName>Market Value At Stabilization</fullName>
            </value>
            <value>
                <fullName>Market Value At Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>