force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/LLC_BI__Deductible__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deductible__c</fullName>
    <description>The user populates this optional currency field to state the policy’s service deductible. By default, this field is blank.</description>
    <inlineHelpText>Enter the total service deductible.</inlineHelpText>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>