force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/LLC_BI__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Effective_Date__c</fullName>
    <description>The user populates this optional Date field to show when the service goes into effect. By default, this field is blank.</description>
    <inlineHelpText>Use this field to determine when the service goes into effect.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>