force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/LLC_BI__Service_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Service_Mgmt__c</fullName>
    <description>The system uses this required lookup field to locate the Service Management record.</description>
    <inlineHelpText>The lookup for the Service Management record.</inlineHelpText>
    <label>Service Mgmt</label>
    <referenceTo>LLC_BI__Service_Mgmt__c</referenceTo>
    <relationshipLabel>Service Mgmt Details</relationshipLabel>
    <relationshipName>Service_Mgmt_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>