force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/recordTypes/Appraiser.recordType-meta.xml
<RecordType>
    <fullName>Appraiser</fullName>
    <active>true</active>
    <description>Custom Record Type for the Appraiser Service Mgmt Details.</description>
    <label>Appraiser</label>
</RecordType>